<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_server_url">YOUR_SERVER_URL</string>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Parse Starter Project</string>

    <string name="hello_world">Hello World!</string>
    <string name="title_activity_specification">Specification</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_mainpage">Mainpage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">Overview</string>
    <string name="communicate">Communicate</string>
    <string name="course_review">Course Review</string>
    <string name="main_page">Main Page</string>
    <string name="textview">TextView</string>
    <string name="online_master_of_science_in_computer_science">Online Master of Science in Computer Science</string>
    <string name="_0_10">0/10</string>
    <string name="name">NAME</string>
    <string name="hours">HOURS</string>
    <string name="diff">DIFF</string>
    <string name="num">NUM</string>
    <string name="no">NO.</string>
    <string name="dif">DIF.</string>
    <string name="reset">RESET</string>
    <string name="sign_out">Sign Out</string>
    <string name="cs_7641_machine_learning">CS 7641 Machine Learning</string>
    <string name="core_courses">Core Courses</string>
    <string name="cs_7642_reinforcement_learning">CS 7642 Reinforcement Learning</string>
    <string name="cse_6242_data_and_visual_analytics">CSE 6242 Data and Visual Analytics</string>
    <string name="_6242_data_visual_analytic">6242 Data Visual Analytic</string>
    <string name="_7642_reinf_learning">7642 Reinf Learning</string>
    <string name="_6242_data_visual">6242 Data Visual</string>
    <string name="_6035_intro_infor_security">6035 Intro Infor Security</string>
    <string name="_6220_high_perform_computing">6220 High-Perform Computing</string>
    <string name="_6340_software_analysis_and_testing">6340 Software Analysis and Testing</string>
    <string name="_6210_advanced_os">6210 Advanced OS</string>
    <string name="comfirm">comfirm</string>
    <string name="pick_course_for_current_semster">Pick Course for current semster:</string>
    <string name="yesterday_hour">Yesterday(Hour)</string>
    <string name="course_details">Course Details</string>
    <string name="ii_there_are_4_specializations_please_select_them_through_route_plan">II. There are (4) specializations. Please select them through \'Route Plan\'.</string>
</resources>
