<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.parse.omscs_starter.Fragments.machine_learning_frag">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="24dp"
        android:text="@string/core_courses"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/goldhex"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="CS 6505 Computability, Algorithms, and Complexity"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:ignore="HardcodedText"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/cs_7641_machine_learning"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="12dp"
        android:text="Pick three (3) of:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/goldhex"
        tools:ignore="HardcodedText" />

    <CheckBox
        android:id="@+id/check_7642"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:fontFamily="sans-serif"
        android:text="@string/_7642_reinf_learning"
        tools:ignore="UnusedAttribute" />

    <CheckBox
        android:id="@+id/check_7646"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/check_7642"
        android:layout_alignStart="@+id/check_7642"
        android:layout_below="@+id/check_7642"
        android:text="7646 ML for Trading"
        tools:ignore="HardcodedText" />

    <CheckBox
        android:id="@+id/check_6242"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6242_data_visual_analytic"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:layout_alignBaseline="@+id/check_7642"
        android:layout_alignBottom="@+id/check_7642"
        android:layout_toRightOf="@+id/check_7642"
        android:layout_toEndOf="@+id/check_7642" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="Free Elective"
        android:textColor="@color/goldhex"
        tools:ignore="HardcodedText"
        android:layout_below="@+id/check_7646"
        android:layout_alignLeft="@+id/check_7646"
        android:layout_alignStart="@+id/check_7646" />

    <ListView
        android:id="@+id/course_list_computing"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="14dp" />

    <Button
        android:id="@+id/update_machine_learning"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="Update"
        tools:ignore="HardcodedText"
        android:layout_below="@+id/course_list_computing"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
